Fix nav menu alignment, refactored code

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-form-page.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-form-page.scss
@@ -17,7 +17,6 @@
   }
   [data-source*="checkyourhealthforcitystaff"] .col-md-2 {
     display: none;
-    $form-type: checkyourhealthforcitystaff;
   }
   [data-source*="checkyourhealthforcitystaff"] .col-md-3{
     width: 100% !important;
